Initial commit for gh-pages.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      Тест.
+      Тест  страницы.
     </header>
     <menu>
       <!-- <a id="project-button" href="./projects.html">
