--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Д. Сердюченко</title>
-    <!-- <link rel="stylesheet" href="./stylesheets/css/styles.css"> -->
+    <link rel="stylesheet" href="./stylesheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="shortcut icon" href="img/favicon.png"> -->
   </head>
