--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
   </head>
   <body>
     <header>
-      Тест  страницы.
+      Сайт Дмитрия Сердюченко.
     </header>
     <menu>
-      <!-- <a id="project-button" href="./projects.html">
+      <!-- <a id="project-button" href="./projects.html"> -->
         <div class="menu">
-          Projects
+          <img alt="video monitoring" src="./img/video_monitoring.jpg">
         </div>
-      </a>
-      <a id="blog-button" href="./blog.html">
+      <!-- </a> -->
+      <!-- <a id="blog-button" href="./blog.html"> -->
         <div class="menu">
-          Blog
+          <img alt="access control" src="./img/access_control.jpg">
         </div>
-      </a> -->
+      <!-- </a> -->
+      <div class="menu">
+        <img alt="smart house" src="./img/smart_house.jpg">
+      </div>
+      <div class="menu">
+        <img alt="fire alarm" src="./img/fire_alarm.jpg">
+      </div>
     </menu>
     <footer>
       <!-- <a href="https://linkedin.com/in/antonserdyuchenko/">
