Add new page for video monitoring.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
       Сайт Дмитрия Сердюченко.
     </header>
     <menu>
-      <!-- <a id="project-button" href="./projects.html"> -->
+      <a id="video_monitoring-button" href="./video_monitoring/video_monitoring.html">
         <div class="menu">
           <img alt="video monitoring" src="./img/video_monitoring.jpg">
         </div>
-      <!-- </a> -->
-      <!-- <a id="blog-button" href="./blog.html"> -->
+      </a>
         <div class="menu">
           <img alt="access control" src="./img/access_control.jpg">
         </div>
-      <!-- </a> -->
       <div class="menu">
         <img alt="smart house" src="./img/smart_house.jpg">
       </div>
@@ -30,15 +28,7 @@
       </div>
     </menu>
     <footer>
-      <!-- <a href="https://linkedin.com/in/antonserdyuchenko/">
-        <img alt="linkedin" src="img/footer/linkedin-logo.svg">
-      </a>
-      <a href="https://github.com/anton415/">
-        <img alt="github" src="img/footer/github-logo.svg">
-      </a>
-      <a href="https://stackoverflow.com/users/7037530/anton-serdyuchenko">
-        <img alt="stack overflow" src="img/footer/stackoverflow-logo.png">
-      </a> -->
+
     </footer>
   </body>
 </html>
