Add access control page.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
           <img alt="video monitoring" src="./img/video_monitoring.jpg">
         </div>
       </a>
+      <a id="access_control-button" href="./access_control/access_control.html">
         <div class="menu">
           <img alt="access control" src="./img/access_control.jpg">
         </div>
+      </a>
+
       <div class="menu">
         <img alt="smart house" src="./img/smart_house.jpg">
       </div>
