Add page for smart home.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
           <img alt="access control" src="./img/access_control.jpg">
         </div>
       </a>
+      <a id="smart_house-button" href="./smart_house/smart_house.html">
+        <div class="menu">
+          <img alt="smart house" src="./img/smart_house.jpg">
+        </div>
+      </a>
 
-      <div class="menu">
-        <img alt="smart house" src="./img/smart_house.jpg">
-      </div>
       <div class="menu">
         <img alt="fire alarm" src="./img/fire_alarm.jpg">
       </div>
