Add page for fire alarm.

--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
           <img alt="video monitoring" src="./img/video_monitoring.jpg">
         </div>
       </a>
+
       <a id="access_control-button" href="./access_control/access_control.html">
         <div class="menu">
           <img alt="access control" src="./img/access_control.jpg">
         </div>
       </a>
+
       <a id="smart_house-button" href="./smart_house/smart_house.html">
         <div class="menu">
           <img alt="smart house" src="./img/smart_house.jpg">
         </div>
       </a>
 
-      <div class="menu">
-        <img alt="fire alarm" src="./img/fire_alarm.jpg">
-      </div>
+      <a id="fire_alarm-button" href="./fire_alarm/fire_alarm.html">
+        <div class="menu">
+          <img alt="fire alarm" src="./img/fire_alarm.jpg">
+        </div>
+      </a>
+
     </menu>
     <footer>
 
