Edit photo for video monitoring.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       Сайт Дмитрия Сердюченко.
     </header>
-    <menu>
+    <menu-1>
       <a id="video_monitoring-button" href="./video_monitoring/video_monitoring.html">
         <div class="menu">
           <img alt="video monitoring" src="./img/video_monitoring.jpg">
@@ -36,7 +36,7 @@
         </div>
       </a>
 
-    </menu>
+    </menu-1>
     <footer>
 
     </footer>
