--- a/index.html
+++ b/index.html
@@ -11,32 +11,33 @@
     <header>
       Сайт Дмитрия Сердюченко.
     </header>
-    <menu-1>
-      <a id="video_monitoring-button" href="./video_monitoring/video_monitoring.html">
-        <div class="menu">
-          <img alt="video monitoring" src="./img/video_monitoring.jpg">
-        </div>
-      </a>
+    <main>
+      <div class="menu-items">
+        <a id="video_monitoring-button" href="./video_monitoring/video_monitoring.html">
+          <div class="menu-item">
+            <img alt="video monitoring" src="./img/video_monitoring.jpg">
+          </div>
+        </a>
 
-      <a id="access_control-button" href="./access_control/access_control.html">
-        <div class="menu">
-          <img alt="access control" src="./img/access_control.jpg">
-        </div>
-      </a>
+        <a id="access_control-button" href="./access_control/access_control.html">
+          <div class="menu-item">
+            <img alt="access control" src="./img/access_control.jpg">
+          </div>
+        </a>
 
-      <a id="smart_house-button" href="./smart_house/smart_house.html">
-        <div class="menu">
-          <img alt="smart house" src="./img/smart_house.jpg">
-        </div>
-      </a>
+        <a id="smart_house-button" href="./smart_house/smart_house.html">
+          <div class="menu-item">
+            <img alt="smart house" src="./img/smart_house.jpg">
+          </div>
+        </a>
 
-      <a id="fire_alarm-button" href="./fire_alarm/fire_alarm.html">
-        <div class="menu">
-          <img alt="fire alarm" src="./img/fire_alarm.jpg">
-        </div>
-      </a>
-
-    </menu-1>
+        <a id="fire_alarm-button" href="./fire_alarm/fire_alarm.html">
+          <div class="menu-item">
+            <img alt="fire alarm" src="./img/fire_alarm.jpg">
+          </div>
+        </a>
+      </div>
+    </main>
     <footer>
 
     </footer>
